--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1,7 +1,8 @@
 $primary-color: #fffff9;
 $secondary-color: #db288e;
-$tertiary-color: #251320;
-$quaternary-color: #665294;
+$tertiary-color: #f7ea06;
+$quaternary-color: #251320;
+;
 
 body {
     margin: 0;
@@ -17,7 +18,7 @@ body {
 
     .header {
         z-index: 2;
-        height: 130px;
+        height: 120px;
         display: grid;
         grid-template-columns: 1fr 5fr;
         align-items: baseline;
@@ -43,36 +44,78 @@ body {
     }
 
     .card_body {
-        height: 100%;
+        height: calc(100% - 120px);
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 4fr;
 
         .content {
-            height: 100%;
             z-index: 2;
             display: grid;
-            grid-template-columns: 1fr 2fr;
-            gap: 20px;
+            grid-template-columns: 1fr 80%;
+            align-items: center;
             background-color: $primary-color;
             color: #251320;
 
             &_headline {
                 transform: rotate(-90deg);
-
-
+                font-size: 30px;
             }
 
             &_quote {
+                height: 100px;
                 font-size: 20px;
                 transform: rotate(-90deg);
-                overflow-wrap: break-word;
             }
         }
 
-        .buttons {
-            background-color: $secondary-color;
+        .invitation {
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+            margin-bottom: 50px;
 
-            h2 {}
+            h2 {
+                color: $tertiary-color;
+            }
+
+            .buttons {
+                
+                button {
+                    border: none;
+                    padding: 20px;
+                    border-radius: 4px;
+                    margin: 0 10px;
+
+                    a {
+                        text-decoration: none;
+                        font-size: 18px;
+                        font-weight: bold;
+                    }
+                }
+
+                .button {
+                    background-color: $tertiary-color;
+                    color: $quaternary-color;
+
+                    &--secondary {
+                        background-color: $quaternary-color;
+                    }
+
+                    &_link {
+                        color: $quaternary-color;
+
+                        &--secondary {
+                            color: $primary-color;
+
+                        }
+                    }
+
+
+                }
+
+
+            }
         }
     }
 
